refactor: transfer DAO logic from services to storage